=== 1.5.2 / 2008-04-22

* 2 Minor Enhancements:

  * Added multiruby_skip attribute for 'rake multi' version invalidation.
  * Improved error messages when files are missing.

* 1 Bug Fix:

  * Removed require of rake/contrib/sshpublisher to fix 1.9.

=== 1.5.1 / 2008-03-04

* 2 Minor Enhancements:

  * Removed install/uninstall tasks. Too buggy. Gems do a better job.
  *	Added cleaning of rbc files to default list

* 5 Bug Fixes:

  * Correctly deal with errors intuiting history and readme files. Thanks Aaron!
  * Fixed rdoc title. Thanks, Sander!
  * Fixed sow to match new Rakefile and History format. Thanks, me!
  *	Moved test/unit to the front for rake test. Fixes use of miniunit.
  * Renamed shadowed variable.

=== 1.5.0 / 2008-01-30

* 9 Minor Enhancements:

  * Added autopopulation of changes from History.txt.
  * Added autopopulation of urls from History.txt.
  * Added autopopulation of description from History.txt
  * Added autopopulation of summary from description.
  * Added description_sections to declare what sections of readme to use.
  * Added summary_sentences to declare how many sentences you want in summary.
  * Added developer(name, email) to cleanly populate both author/email arrays.
  * author and email now default to "doofus".
  * author and email warn that they'll blow up on 2008-04-01.

=== 1.4.0 / 2007-12-20

* 1 Major Enhancement:

  * rake package now supports INLINE=1 and FORCE_PLATFORM=whatever.
    * Supports ruby_inline extensions.
    * Contributed by Luis Lavena. Thanks Luis!

=== 1.3.0 / 2007-08-13

* 1 Major Enhancement:

  * Hoe now builds signed gems automatically.  Run the generate_key task to
    automatically create a signing key.

* 4 Minor Enhancements:

  * Extended rdoc pattern to include ext dirs.
  * Fixed dependency adding for versionless dependencies.
  * Added NODOT env var to disable RDoc diagram generation.
  * The config_hoe task automatically merges in new config entries.

=== 1.2.2 / 2007-07-23
