@@ -1,9 +1,10 @@
 === 1.5.2 / 2008-04-22
 
-* 2 Minor Enhancements:
+* 3 Minor Enhancements:
 
   * Added multiruby_skip attribute for 'rake multi' version invalidation.
   * Improved error messages when files are missing.
+  * Added rubygems post_install_message accessor. Thanks to Dr. Nic.
 
 * 1 Bug Fix:
 
